# padel-rstp-cam-stream

./: .gitattributes
.github/workflows/: deploy-frontend.yml  deploy-server.yml  docker-build-test.yml
camaras/front/: .env  .env.example  Dockerfile  nginx.conf  package-lock.json  package.json  vite.config.ts
camaras/server-completo-frp/: .dockerignore  .env.example  .gitignore  CLOUDFLARE-TUNNEL-SETUP.md  DEPLOY.md  Dockerfile  README.md  SETUP-GUIDE.md  deploy-local.sh  docker-compose.yml  frps.toml  package-lock.json  package.json  server-cloudflared.mjs  server-completo-frp.mjs
camaras/server-completo-frp/config/: frpc.toml  frps.toml
camaras/stream-agent-electron/: ARCHITECTURE.md  CLOUDFLARED-TROUBLESHOOTING.md  ESPECIFICACION-COMPLETA.md  config.json  forge.config.js  mediamtx.yml  package-lock.json  package.json  setup-cloudflared.ps1
tauri/: INSTALAR-RUST.md  README.md  SETUP-COMPLETO.md  package-lock.json
tauri/src/: App.css  App.tsx
tauri/src-tauri/: Cargo.toml  tauri.conf.json
tauri/src-tauri/config/: cameras.json  cloudflared-config.yml  config.json  mediamtx.yml
tauri/src-tauri/src/: app_state.rs  config_manager.rs  lib.rs  main.rs
tauri/src-tauri/src/cameras/: camera_manager.rs  mod.rs
tauri/src-tauri/src/commands/: mod.rs
tauri/src-tauri/src/supervisor/: mod.rs  process_manager.rs  reconnect.rs
tunel-electronpc/stream-agent/: SETUP-AUTOMATICO.md  cameras.json  cloudflared-config.yml  config.json  mediamtx.yml  package-lock.json  package.json  tailwind.config.js  test-cloudflared.bat  webpack.renderer.config.js  webpack.rules.js
(+52 files in other folders)
